kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  namespace: homework

spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 8000
